gitops/manifests/platform/argoconfig/argocd-dex-server.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metrics.dynatrace.com/scrape: 'true'
    metrics.dynatrace.com/port: '5558'
  name: argocd-dex-server
  namespace: argocd
