gitops/manifests/platform/argoconfig/argocd-metrics.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metrics.dynatrace.com/port: "8082"
    metrics.dynatrace.com/scrape: "true"
  labels:
    app.kubernetes.io/component: metrics
    app.kubernetes.io/name: argocd-metrics
    app.kubernetes.io/part-of: argocd
  name: argocd-metrics
  namespace: argocd
spec:
  ports:
  - name: metrics
    port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    app.kubernetes.io/name: argocd-application-controller
  type: ClusterIP
