gitops/manifests/platform/argoconfig/argocd-server-metrics.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metrics.dynatrace.com/port: "8083"
    metrics.dynatrace.com/scrape: "true"
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server-metrics
    app.kubernetes.io/part-of: argocd
  name: argocd-server-metrics
  namespace: argocd
spec:
  ports:
  - name: metrics
    port: 8083
    protocol: TCP
    targetPort: 8083
  selector:
    app.kubernetes.io/name: argocd-server
  type: ClusterIP
